test_output.txt
 INFO Testing chapter 'Introduction': "chapter_01_introduction.md"
 INFO Testing chapter 'Tensors: The Bedrock': "chapter_02_tensors.md"
ERROR rustdoc returned an error:

--- stdout

running 2 tests
test chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_ (line 7) ... FAILED
test chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_::Hands_On (line 47) ... FAILED

failures:

---- chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_ (line 7) stdout ----
error[E0405]: cannot find trait `Device` in this scope
 --> chapter_02_tensors.md:8:44
  |
3 | pub struct Tensor<T, const RANK: usize, D: Device = Cpu> {
  |                                            ^^^^^^ not found in this scope

error[E0412]: cannot find type `Cpu` in this scope
 --> chapter_02_tensors.md:8:53
  |
3 | pub struct Tensor<T, const RANK: usize, D: Device = Cpu> {
  |                                                     ^^^ not found in this scope

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0405, E0412.
For more information about an error, try `rustc --explain E0405`.
Couldn't compile the test.
---- chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_::Hands_On (line 47) stdout ----
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `xla_rs`
 --> chapter_02_tensors.md:48:5
  |
3 | use xla_rs::tensor::Tensor;
  |     ^^^^^^ use of unresolved module or unlinked crate `xla_rs`
  |
help: you might be missing a crate named `xla_rs`, add it to your project and import it in your code
  |
2 + extern crate xla_rs;
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
Couldn't compile the test.

failures:
    chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_ (line 7)
    chapter_02_tensors.md - Chapter_2__Tensors__The_Bedrock_::Hands_On (line 47)

test result: FAILED. 0 passed; 2 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.07s


--- stderr

 INFO Testing chapter 'Automatic Differentiation': "chapter_03_autograd.md"
ERROR rustdoc returned an error:

--- stdout

running 2 tests
test chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::Example (line 30) ... ignored
test chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::The_Tape (line 13) ... FAILED

failures:

---- chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::The_Tape (line 13) stdout ----
error[E0412]: cannot find type `Tensor` in this scope
 --> chapter_03_autograd.md:15:15
  |
4 |     pub data: Tensor<T, RANK, Cpu>,
  |               ^^^^^^ not found in this scope

error[E0412]: cannot find type `Cpu` in this scope
 --> chapter_03_autograd.md:15:31
  |
4 |     pub data: Tensor<T, RANK, Cpu>,
  |                               ^^^ not found in this scope
  |
help: you might be missing a type parameter
  |
3 | pub struct Variable<T, const RANK: usize, Cpu> {
  |                                         +++++

error[E0412]: cannot find type `Rc` in this scope
 --> chapter_03_autograd.md:16:15
  |
5 |     pub grad: Rc<RefCell<Option<Tensor<T, RANK, Cpu>>>>,
  |               ^^ not found in this scope
  |
help: consider importing this struct
  |
2 + use std::rc::Rc;
  |

error[E0412]: cannot find type `RefCell` in this scope
 --> chapter_03_autograd.md:16:18
  |
5 |     pub grad: Rc<RefCell<Option<Tensor<T, RANK, Cpu>>>>,
  |                  ^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
2 + use std::cell::RefCell;
  |

error[E0412]: cannot find type `Tensor` in this scope
 --> chapter_03_autograd.md:16:33
  |
5 |     pub grad: Rc<RefCell<Option<Tensor<T, RANK, Cpu>>>>,
  |                                 ^^^^^^ not found in this scope

error[E0412]: cannot find type `Cpu` in this scope
 --> chapter_03_autograd.md:16:49
  |
5 |     pub grad: Rc<RefCell<Option<Tensor<T, RANK, Cpu>>>>,
  |                                                 ^^^ not found in this scope
  |
help: you might be missing a type parameter
  |
3 | pub struct Variable<T, const RANK: usize, Cpu> {
  |                                         +++++

error[E0412]: cannot find type `Rc` in this scope
 --> chapter_03_autograd.md:17:22
  |
6 |     pub node: Option<Rc<dyn GraphNode>>,
  |                      ^^ not found in this scope
  |
help: consider importing this struct
  |
2 + use std::rc::Rc;
  |

error[E0405]: cannot find trait `GraphNode` in this scope
 --> chapter_03_autograd.md:17:29
  |
6 |     pub node: Option<Rc<dyn GraphNode>>,
  |                             ^^^^^^^^^ not found in this scope

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0405, E0412.
For more information about an error, try `rustc --explain E0405`.
Couldn't compile the test.

failures:
    chapter_03_autograd.md - Chapter_3__Automatic_Differentiation::The_Tape (line 13)

test result: FAILED. 0 passed; 1 failed; 1 ignored; 0 measured; 0 filtered out; finished in 0.08s


--- stderr

 INFO Testing chapter 'Building Blocks': "chapter_04_nn.md"
ERROR rustdoc returned an error:

--- stdout

running 3 tests
test chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::Example (line 32) ... ignored
test chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Module_Trait (line 9) ... FAILED
test chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Linear_Layer (line 23) ... FAILED

failures:

---- chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Module_Trait (line 9) stdout ----
error[E0405]: cannot find trait `TensorElem` in this scope
 --> chapter_04_nn.md:10:21
  |
3 | pub trait Module<T: TensorElem>: Debug + Send + Sync {}
  |                     ^^^^^^^^^^ not found in this scope

error[E0404]: expected trait, found derive macro `Debug`
 --> chapter_04_nn.md:10:34
  |
3 | pub trait Module<T: TensorElem>: Debug + Send + Sync {}
  |                                  ^^^^^ not a trait
  |
help: consider importing this trait instead
  |
2 + use std::fmt::Debug;
  |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0404, E0405.
For more information about an error, try `rustc --explain E0404`.
Couldn't compile the test.
---- chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Linear_Layer (line 23) stdout ----
error[E0405]: cannot find trait `TensorElem` in this scope
 --> chapter_04_nn.md:24:22
  |
3 | pub struct Linear<T: TensorElem> {
  |                      ^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `Tensor` in this scope
 --> chapter_04_nn.md:25:17
  |
4 |     pub weight: Tensor<T, 2, Cpu>,
  |                 ^^^^^^ not found in this scope

error[E0412]: cannot find type `Cpu` in this scope
 --> chapter_04_nn.md:25:30
  |
4 |     pub weight: Tensor<T, 2, Cpu>,
  |                              ^^^ not found in this scope
  |
help: you might be missing a type parameter
  |
3 | pub struct Linear<T: TensorElem, Cpu> {
  |                                +++++

error[E0412]: cannot find type `Tensor` in this scope
 --> chapter_04_nn.md:26:22
  |
5 |     pub bias: Option<Tensor<T, 1, Cpu>>,
  |                      ^^^^^^ not found in this scope

error[E0412]: cannot find type `Cpu` in this scope
 --> chapter_04_nn.md:26:35
  |
5 |     pub bias: Option<Tensor<T, 1, Cpu>>,
  |                                   ^^^ not found in this scope
  |
help: you might be missing a type parameter
  |
3 | pub struct Linear<T: TensorElem, Cpu> {
  |                                +++++

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0405, E0412.
For more information about an error, try `rustc --explain E0405`.
Couldn't compile the test.

failures:
    chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Linear_Layer (line 23)
    chapter_04_nn.md - Chapter_4__Neural_Network_Primitives::The_Module_Trait (line 9)

test result: FAILED. 0 passed; 2 failed; 1 ignored; 0 measured; 0 filtered out; finished in 0.08s


--- stderr

 INFO Testing chapter 'The Mechanics of Attention': "chapter_05_attention.md"
 INFO Testing chapter 'The Gemma Architecture': "chapter_06_gemma.md"
 INFO Testing chapter 'Inference Optimizations': "chapter_07_inference_optimizations.md"
 INFO Testing chapter 'Distributed Inference': "chapter_08_distributed_inference.md"
 INFO Testing chapter 'The Training Loop': "chapter_09_training.md"
 INFO Testing chapter 'Serving': "chapter_10_serving.md"
 INFO Testing chapter 'State Space Models': "chapter_11_ssm.md"
 INFO Testing chapter 'Generative Art: Diffusion': "chapter_12_diffusion.md"
 INFO Testing chapter 'Communication Collectives': "chapter_13_collectives.md"
 INFO Testing chapter 'Reinforcement Learning': "chapter_14_rl.md"
 INFO Testing chapter 'Quantization': "chapter_15_quantization.md"
ERROR One or more tests failed
